--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     overflow: hidden;
-    margin: 0;
+    /* margin: 0 auto; */
 }
 
 header {
@@ -101,12 +101,13 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 700px;
+    /* margin-left: 2.5rem; */
 }
 
 /*=============== Card Design ==============*/
 .card {
-    max-width: 620px;
+    /* max-width: 620px; */
+    width: 620px;
     background: rgba(255, 255, 255, 0.089);
     backdrop-filter: blur(8px);
     border: 1px solid rgba(255, 255, 255, 0.473);
@@ -269,19 +270,37 @@ header {
 
 /* Media Queries for Mobile */
 @media (max-width: 600px) {
+    body {
+        width: 100%;
+        overflow-x: hidden;
+        overflow-y: scroll;
+
+    }
+
+    #main {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        /* max-height: 150vh; */
+    }
+
     #search {
         width: 100%;
-        font-size: 5vw;
+        font-size: 1rem;
     }
 
     #form {
         width: 90%;
+        margin: 0 auto;
     }
 
     .card {
-        width: 40vh;
+
+        width: 95%;
         display: flex;
         flex-direction: column;
+        /* min-height: 80vh; */
 
     }
 
