--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ header {
 }
 
 .repo {
-    background-color: #2a2a72;
+    background-color: #171754;
     border-radius: 5px;
     display: inline-block;
     color: white;
@@ -174,10 +174,33 @@ header {
     transition: all 0.3s;
 }
 
-.repo:hover {
-    transform: scale(1.2);
+.repo::before {
+    content: "";
+    border-radius: 5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, rgba(34, 20, 45, 0.725), rgba(7, 24, 125, 0.73));
+    box-shadow:
+        inset 7px 1em 3em rgba(4, 5, 4, 0.7),
+        inset -6px 2em 4em rgba(20, 28, 226, 0.88),
+        4px 4px 10px rgba(0, 0, 0, 0.3);
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    z-index: -1;
+    transition: transform 0.3s;
 }
 
+.repo:hover {
+    transform: translateY(-5px);
+    transform: scale(1.1);
+}
+
+.repo:hover::before {
+    transform: scaleX(1);
+}
 
 .box {
     padding: 3rem;
@@ -337,7 +360,7 @@ header {
 }
 
 .follow-card {
-    width: 340px;
+    width: 370px;
     /* height: 320px; */
     display: flex;
     flex-direction: column;
