--- a/style.css
+++ b/style.css
@@ -16,16 +16,22 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    /* overflow: hidden; */
 }
 
-#canvas,
-#canvas1 {
+#canvas-container {
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
+    perspective: 1200px;
+}
+
+#canvas,
+#canvas1 {
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
 }
 
 header {
@@ -55,16 +61,58 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: inset -3px -4px 15px 3px rgb(8 16 47),
-        inset -8px -4px 18px rgb(11 90 124);
-    background: rgb(2, 0, 36);
     background: linear-gradient(90deg,
-            rgba(2, 0, 36, 1) 0%,
-            rgb(44, 15, 105) 56%,
-            rgb(14, 86, 101) 100%);
+            #041e5e,
+            #0a1b47,
+            #021233,
+            #110546,
+            #0d245f);
     border-radius: 10px;
-    z-index: 100;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+    position: relative;
+    overflow: hidden;
+    animation: gradientRotate 10s linear infinite;
 }
+
+#form::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg,
+            #041e5e,
+            #0a1b47,
+            #020814,
+            #110546,
+            #0d245f);
+    border-radius: 10px;
+    animation: gradientRotate 10s linear infinite reverse;
+}
+
+@keyframes gradientRotate {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    100% {
+        background-position: 100% 50%;
+    }
+}
+
+#form::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(3, 5, 70, 0.3);
+    border-radius: 10px;
+}
+
+
 
 #form button img {
     width: 24px;
@@ -95,23 +143,62 @@ header {
 
 #main {
     display: flex;
+    overflow: hidden;
     flex-direction: column;
     align-items: center;
-    /* margin-left: 2.5rem; */
+    position: relative;
 }
 
 /*=============== Card Design ==============*/
 .card {
-    /* max-width: 620px; */
     width: 620px;
     background: rgba(255, 255, 255, 0.089);
-    backdrop-filter: blur(8px);
-    border: 1px solid rgba(255, 255, 255, 0.473);
+    backdrop-filter: blur(30px);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     display: flex;
     padding: 3rem;
     margin: 1rem 1.5rem;
+    transition: all .5s;
+}
+
+.card:hover {
+    box-shadow: 1px 0px 30px 0 rgb(16, 30, 105);
+
+}
+
+.show-before::before {
+    width: 150px;
+    height: 150px;
+    content: "";
+    position: absolute;
+    background-color: rgb(16, 30, 105);
+    z-index: -1;
+    border-radius: 50%;
+    right: 10%;
+    top: 10%;
+    transition: all 1s;
+}
+
+.show-before:hover::before {
+    transform: translateY(150px);
+}
+
+.show-before::after {
+    width: 150px;
+    height: 150px;
+    content: "";
+    position: absolute;
+    background-color: rgb(16, 30, 105);
+    z-index: -1;
+    border-radius: 50%;
+    left: 10%;
+    bottom: 10%;
+    transition: all 1s linear;
+}
+
+.show-before:hover::after {
+    transform: translateY(-150px);
 }
 
 .avatar {
@@ -352,11 +439,13 @@ header {
 
 #follow {
     display: flex;
+    flex-wrap: wrap;
+    overflow-x: hidden;
     gap: 1rem;
 }
 
 .follow-card {
-    width: 370px;
+    width: 360px;
     /* height: 320px; */
     display: flex;
     flex-direction: column;
@@ -369,6 +458,7 @@ header {
     border-radius: 20px;
     display: flex;
     padding: 2rem 1rem;
+    margin-bottom: 20px;
 }
 
 .follower-info {
