--- a/style.css
+++ b/style.css
@@ -6,6 +6,25 @@
     padding: 0;
 }
 
+:root {
+    --scrollbar-thumb-color: #022c8e;
+    --scrollbar-track-color: #09256cbf;
+    --scrollbar-width: 12px;
+}
+
+body::-webkit-scrollbar {
+    width: var(--scrollbar-width);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar-thumb-color);
+    border-radius: 10px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: var(--scrollbar-track-color);
+}
+
 body {
     background: rgb(2, 0, 36);
     background: linear-gradient(0deg, rgba(13, 35, 93, 1) 0%, rgba(0, 5, 8, 1) 70%);
@@ -16,6 +35,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    scroll-behavior: smooth;
 }
 
 #canvas-container {
